doing graph embeds

--- a/ModelExport.ipynb
+++ b/ModelExport.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "7e4911fd-8805-4929-a2fe-ad888c3317ed",
    "metadata": {},
    "outputs": [
@@ -273,6 +273,20 @@
       "/opt/conda/lib/python3.10/site-packages/torch/overrides.py:118: UserWarning: 'has_mkldnn' is deprecated, please use 'torch.backends.mkldnn.is_available()'\n",
       "  torch.has_mkldnn,\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2d29923878f1406386747b521184c0ab",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/17001 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -281,9 +295,11 @@
     "from torch_geometric.data import Batch\n",
     "\n",
     "results = defaultdict(dict)\n",
+    "mc_dropout_results = defaultdict(dict)\n",
     "\n",
     "BATCH_SIZE = 8\n",
-    "MC_DROPOUT_ITERS = 20\n",
+    "MC_DROPOUT_ITERS = 20 # This can be very time consuming, but should slightly improve perf\n",
+    "HAS_DROPOUT = config[\"dropout\"] > 0\n",
     "\n",
     "next_batch = []\n",
     "\n",
@@ -301,7 +317,8 @@
     "            batch_data = [d[0] for d in next_batch]\n",
     "            file_ids = [d[1] for d in next_batch]\n",
     "            config_ids = [d[2] for d in next_batch]\n",
-    "            \n",
+    "\n",
+    "            model.eval()\n",
     "            with torch.no_grad():\n",
     "                batch = Batch.from_data_list(batch_data)\n",
     "                batch = batch.to('cuda')\n",
@@ -309,8 +326,96 @@
     "            \n",
     "            for o, f, c in zip(output.tolist(), file_ids, config_ids):\n",
     "                results[f][c] = o\n",
+    "\n",
+    "            if not HAS_DROPOUT:\n",
+    "                next_batch = []\n",
+    "                continue\n",
+    "                \n",
+    "            with torch.no_grad():\n",
+    "                model.train()\n",
+    "                batch = batch.to('cuda')\n",
+    "                results = []\n",
+    "                for i in range(MC_DROPOUT_ITERS):\n",
+    "                    output = model(batch).flatten()\n",
+    "                    results.append(output)\n",
+    "                mean_results = np.stack(results).mean(axis=0)\n",
+    "\n",
+    "            for o, f, c in zip(mean_results.tolist(), file_ids, config_ids):\n",
+    "                results[f][c] = o\n",
     "            \n",
     "            next_batch = []\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "dde43470-6090-42a9-94d2-af16656c773b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "\n",
+    "SAVE_ID = f\"submissions/{RUN_ID}_nlp.csv\"\n",
+    "df = pandas.DataFrame(results).transpose()\n",
+    "df.to_csv(SAVE_ID)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51e9a10a-e261-41c2-9969-d887d79433f1",
+   "metadata": {},
+   "source": [
+    "## We can also export the graph embeddings for everything.\n",
+    "\n",
+    "This might be helpful for a boosting model. We'll export the train, valid, and test graph embeddings.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "994219e4-2b63-4a60-b6c2-8fc38d99c99e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test Data\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "default_train_dataset = LayoutDataset(\n",
+    "    directories=[\"data/layout/nlp/default/train\"],\n",
+    "    processed_dir=\"data/processed\",\n",
+    "    pretransforms=default_preprocessors,\n",
+    "    posttransforms=postprocessors,\n",
+    "    multiprocess=False,\n",
+    "    force_reload=False\n",
+    ")\n",
+    "\n",
+    "random_train_dataset = LayoutDataset(\n",
+    "    directories=[\"data/layout/nlp/random/train\"],\n",
+    "    processed_dir=\"data/processed\",\n",
+    "    pretransforms=random_preprocessors,\n",
+    "    posttransforms=postprocessors,\n",
+    "    multiprocess=False,\n",
+    "    force_reload=False\n",
+    ")\n",
+    "\n",
+    "default_val_dataset = LayoutDataset(\n",
+    "    directories=[\"data/layout/nlp/default/train\"],\n",
+    "    processed_dir=\"data/processed\",\n",
+    "    pretransforms=default_preprocessors,\n",
+    "    posttransforms=postprocessors,\n",
+    "    multiprocess=False,\n",
+    "    force_reload=False\n",
+    ")\n",
+    "\n",
+    "random_val_dataset = LayoutDataset(\n",
+    "    directories=[\"data/layout/nlp/random/train\"],\n",
+    "    processed_dir=\"data/processed\",\n",
+    "    pretransforms=random_preprocessors,\n",
+    "    posttransforms=postprocessors,\n",
+    "    multiprocess=False,\n",
+    "    force_reload=False\n",
+    ")\n",
+    "\n"
    ]
   }
  ],
