layout submission file

--- a/notebooks/GenerateLayoutSubmissions.ipynb
+++ b/notebooks/GenerateLayoutSubmissions.ipynb
@@ -1610,7 +1610,7 @@
     }
    ],
    "source": [
-    "results[\"layout:xla:default:fbaa8bb6a1aed9988281085c91065c05\"]"
+    "joine"
    ]
   },
   {
